objects/thankful__ThankfulApiAdditionalInformation__mdt.object
<CustomObject>
    <description>Object to hold additional information that needs to be sent over related to case</description>
    <fields>
        <fullName>thankful__AdditionalInformationLabel__c</fullName>
        <inlineHelpText>Label that needs to be used by Thankful API</inlineHelpText>
        <label>Additional Information Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankful__CaseFieldApiName__c</fullName>
        <inlineHelpText>API Name of the field on Case that needs to be sent over to Thankful</inlineHelpText>
        <label>Case Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankful__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Thankful API Additional Information</label>
    <listViews>
        <fullName>thankful__All</fullName>
        <columns>MasterLabel</columns>
        <columns>thankful__AdditionalInformationLabel__c</columns>
        <columns>thankful__CaseFieldApiName__c</columns>
        <columns>thankful__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Thankful API Additional Information</pluralLabel>
</CustomObject>